--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-	  <img align="left" style="width:80px;height:100px" src="file:///Users/aarivmybaby/Desktop/Coding/Basic-Portfolio/assets/images/IMG_1002.JPG" class="auth-image" alt="Amandeep Sharma">
+	  <img align="left" style="width:80px;height:100px" src="./assets/images/IMG_1002.JPG" class="auth-image" alt="Amandeep Sharma">
 
       <p>My name is Amandeep Sharma and I currently live in Folsom, California. I grew up in Chicago, IL and moved to 
 		California in the summer of 2017. I have Bachelors of Seience degree in business with concentration in Finance. Currently,
