--- a/portfolio.html
+++ b/portfolio.html
@@ -27,23 +27,23 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="file:///Users/aarivmybaby/Desktop/Coding/Basic-Portfolio/assets/images/UNADJUSTEDNONRAW_thumb_13d.jpg" alt="Placeholder">
+        <img src="./assets/images/UNADJUSTEDNONRAW_thumb_13d.jpg" alt="Placeholder">
       
       </div>
       <div class="work">
-        <img src="file:///Users/aarivmybaby/Desktop/Coding/Basic-Portfolio/assets/images/UNADJUSTEDNONRAW_thumb_13e.jpg" alt="Placeholder">
+        <img src="./assets/images/UNADJUSTEDNONRAW_thumb_13e.jpg" alt="Placeholder">
 
       </div>
       <div class="work">
-        <img src="file:///Users/aarivmybaby/Desktop/Coding/Basic-Portfolio/assets/images/UNADJUSTEDNONRAW_thumb_13f.jpg" alt="Placeholder">
+        <img src="./assets/images/UNADJUSTEDNONRAW_thumb_13f.jpg" alt="Placeholder">
 
       </div>
       <div class="work">
-        <img src="file:///Users/aarivmybaby/Desktop/Coding/Basic-Portfolio/assets/images/UNADJUSTEDNONRAW_thumb_140.jpg" alt="Placeholder">
+        <img src="./assets/images/UNADJUSTEDNONRAW_thumb_140.jpg" alt="Placeholder">
 
       </div>
       <div class="work">
-        <img src="file:///Users/aarivmybaby/Desktop/Coding/Basic-Portfolio/assets/images/UNADJUSTEDNONRAW_thumb_141.jpg" alt="Placeholder">
+        <img src="./assets/images/UNADJUSTEDNONRAW_thumb_141.jpg" alt="Placeholder">
 
       </div>
 
